# keadatabase

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: backend-survey.yml  backend.yml  frontend.yml  map.yml  survey.yml
about/: .env  .gitignore  Dockerfile  README.md  firebase.json  package-lock.json  package.json  pnpm-lock.yaml
about/public/: index.html
about/src/: index.js
about/src/components/: Statistics.js
about/src/views/: index.js
apps/about/: .env.development  .prettierrc  README.md  package.json
apps/about/public/: manifest.json
apps/about/src/: App.js
apps/frontend/: .env  firebase.json  package.json
apps/frontend-next/: .env  .eslintrc.js  eslint.config.js  next.config.js  package.json  tsconfig.json
apps/frontend-next/app/: error.tsx  global.scss  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/frontend/public/: index.html  robots.txt
apps/frontend/src/: App.js  (+2 more)
apps/map/: README.md  next.config.js  package.json  tsconfig.json
apps/survey/: CLAUDE.md  firebase.json  package.json
apps/survey-next/: .env.example  CLAUDE.md  README.md  next.config.ts  package.json  postcss.config.mjs  turbo.json  vercel.json
backend/: .env.example  .gitignore  Dockerfile  README.md  export_kea_be.sh  pyproject.toml  requirements.txt
backend-survey/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend-survey/src/: manage.py
backend-survey/test_data/: Kea.csv
backend/src/: manage.py
backend/src/analysis/: views.py
backend/src/bands/: tests.py  views.py
backend/src/birds/: admin.py  serializers.py  views.py
backend/src/geojson/: serializers.py  views.py
backend/src/keadatabase/: auth.py  pagination.py  renderers.py  router.py  settings.py  urls.py
backend/src/locations/: admin.py  models.py  views.py
backend/src/locations/management/commands/: loadgridtiles.py  loadplaces.py
backend/src/locations/migrations/: 0010_delete_gridtile.py
backend/src/report/: views.py
backend/src/report/serializers/: __init__.py  imports.py  observations.py  surveys.py
backend/src/sightings/: admin.py  signals.py
backend/src/sightings/management/commands/: importobservations.py
backend/src/sightings/migrations/: 0038_auto_20220719_0412.py  0040_alter_contributor_activity.py
backend/src/sightings/models/: birds.py  contributors.py  media.py  observations.py
backend/src/sightings/serializers/: birds.py
backend/src/sightings/views/: birds.py  media.py  observations.py
backend/src/surveys/: views.py
backend/src/surveys/models/: observers.py  surveys.py
backend/src/synchronise/: bands.py  birds.py  tests.py
backend/src/synchronise/management/commands/: synchronise.py
backend/src/theme/static/admin/css/: keadatabase_admin.css
backend/src/theme/templatetags/: api_keys.py
backend/test_data/: tStudyAreas.csv
frontend/: .env  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend-next/: .env  .eslintrc.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend-next/app/: error.tsx  global.scss  layout.tsx  not-found.tsx  page.tsx
frontend/public/: browserconfig.xml  index.html  site.webmanifest
frontend/src/: App.js  App.test.js  analytics.js  index.js
map/: .env  .gitignore  README.md  firebase.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
map/components/: Menu.tsx  context.tsx  utilities.tsx
map/pages/: _app.tsx  all.tsx  fwf.tsx  index.tsx  kct.tsx  track.tsx  zones.tsx
map/styles/: base.css
scripts/: .gitignore
scripts/telemetry/: .Renviron.example  import_telemetry.R
survey/: .env  .gitignore  README.md  package.json  pnpm-lock.yaml
survey/public/: index.html  site.webmanifest
survey/src/: App.js  index.js  polyfills.js
(+611 files in other folders)
