[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.36",
    "dj-database-url==2.3.0",
    "django==4.2.30",
    "django-cors-headers==4.4.0",
    "django-debug-toolbar==4.4.6",
    "django-filter==24.3",
    "django-leaflet==0.30.1",
    "django-storage-swift==1.4.0",
    "django-storages==1.14.4",
    "django-versatileimagefield==3.1",
    "djangorestframework==3.15.2",
    "djangorestframework-csv==3.0.2",
    "djangorestframework-gis==1.1",
    "djangorestframework-simplejwt==5.3.1",
    "environs[django]==11.0.0",
    "gunicorn==23.0.0",
    "marshmallow==3.26.1",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "python-dateutil==2.9.0.post0",
    "sentry-sdk==2.15.0",
    "whitenoise==6.7.0",
]

[tool.ruff]
exclude = [
    "**/migrations/**",
]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    # django-stubs provides type stubs for Django. Without it, basedpyright
    # cannot see attributes that Django attaches dynamically (e.g. the
    # ``Style.MIGRATE_HEADING`` / ``MIGRATE_LABEL`` / ``SUCCESS`` / ... roles
    # that ``django.core.management.color.make_style`` sets via ``setattr``),
    # and flags every ``self.style.MIGRATE_HEADING`` call as
    # ``reportAttributeAccessIssue``. The 4.2.x line targets Django 4.2 LTS.
    "django-stubs==4.2.7",
    "ruff>=0.15.12",
]
